--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,3 +1,3 @@
-textarea { width: 100%; height: calc(100% - 50px) }
+textarea { width: 100%; height: calc(100% - 50px); height: -moz-calc(100% - 50px); height: -webkit-calc(100% - 50px) }
 div { }
 form { display:inline; }
